--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-server",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "A chat server based on the microservice architecture to ensure high availability, high throughput, horizontal scalability.",
   "main": "",
   "repository": "https://github.com/ramank775/chat-server.git",
@@ -24,10 +24,12 @@
     "ioredis": "^5.2.2",
     "joi": "^17.6.0",
     "kafkajs": "2.1.0",
+    "long": "^5.2.0",
     "moment": "^2.29.4",
     "mongodb": "^4.8.1",
     "nats": "^2.7.1",
     "node-fetch": "^2.6.6",
+    "protobufjs": "^7.0.0",
     "short-uuid": "^4.2.0",
     "winston": "^3.8.1",
     "ws": "^8.8.1"
