--- a/deployment/config/nginx/nginx.dev.conf
+++ b/deployment/config/nginx/nginx.dev.conf
@@ -35,6 +35,10 @@ http {
     server 127.0.0.1:4002;
   }
 
+  upstream message_ms {
+    server 127.0.0.1:4003;
+  }
+
   server {
     set_by_lua $nginx_docroot   'return os.getenv("NGINX_DOCROOT")';
     root $nginx_docroot;
@@ -67,7 +71,7 @@ http {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      proxy_pass http://connection_gateway;
+      proxy_pass http://message_ms;
     }
 
     location /login {
