--- a/deployment/config/nginx/nginx.docker.conf
+++ b/deployment/config/nginx/nginx.docker.conf
@@ -56,6 +56,10 @@ http {
     server group:4002;
   }
 
+  upstream message_ms {
+    server message:4003;
+  }
+
   server {
     listen       80 default_server;
     listen       [::]:80 default_server;
@@ -91,7 +95,7 @@ http {
     location /messages {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
-      proxy_pass http://connection_gateway;
+      proxy_pass http://message;
     }
 
     location /login {
