--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -85,9 +85,14 @@
         "--new-message-topic=${TOPIC_NEW_MESSAGE}",
         "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
         "--event-store=${EVENT_STORE}",
-        "--kafka-client-id=message-storage-1",
+        "--kafka-client-id=message-delivery-1",
+        "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_STORAGE}",
         "--kafka-broker-list=${BROKER_LIST}",
+        "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
+        "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
+        "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}",
         "--nats-server-list=${NATS_SERVER_LIST}",
+        "--nats-consumer-group=${CONSUMER_GROUP_MESSAGE_STORAGE}",
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
