--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.474.0",
+    "@aws-sdk/s3-request-presigner": "^3.474.0",
     "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.2",
-    "aws-sdk": "^2.1454.0",
     "axios": "^1.6.2",
     "commander": "^11.0.0",
     "firebase-admin": "^11.10.1",
