--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -83,7 +83,7 @@
         "--debug",
         "--mongo-url=mongodb://localhost:27017/chat",
         "--new-message-topic=${TOPIC_NEW_MESSAGE}",
-        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--client-ack-topic=${TOPIC_CLIENT_ACK_MESSAGE}",
         "--event-store=${EVENT_STORE}",
         "--kafka-client-id=message-delivery-1",
         "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_STORAGE}",
