--- a/deployment/config/nginx/nginx.dev.conf
+++ b/deployment/config/nginx/nginx.dev.conf
@@ -31,7 +31,7 @@ http {
     server 127.0.0.1:4001;
   }
 
-  upstream group_ms {
+  upstream channel_ms {
     server 127.0.0.1:4002;
   }
 
@@ -67,10 +67,11 @@ http {
       proxy_set_header Host $host;
     }
 
-    location /messages {
+    location ~ /messages/(.*) {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
+      rewrite ^/messages/(.*) /$1 break;
       proxy_pass http://message_ms;
     }
 
@@ -112,7 +113,18 @@ http {
       add_header X-uri $1;
 
       rewrite ^/group/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      proxy_pass http://channel_ms;
+    }
+
+    location ~ ^/channels/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      add_header X-match-uri "/channels";
+      add_header X-uri $1;
+
+      rewrite ^/channel/(.*) /$1 break;
+      proxy_pass http://channel_ms;
     }
 
     location ~ /assets/(.*) {
@@ -129,11 +141,11 @@ http {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      add_header X-match-uri "/group";
+      add_header X-match-uri "/groups";
       add_header X-uri $1;
 
       rewrite /groups/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      proxy_pass http://channel_ms;
     }
 
     location / {
