Feature/simplify architecture (#94)
* Updated architecture diagram

* Update Service description

Updated service description w.r.t new architecture changes

* WIP: simiplify architecture

* WIP:

* wip

* fix: storage worker arguments

* fixes

* bug fixes

* fix nginx config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,15 +7,16 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Gateway MS",
-      "program": "${workspaceFolder}/services/connection-gateway/gateway.js",
+      "program": "${workspaceFolder}/services/connection-gateway/ws-gateway.js",
       "args": [
         "--app-name=ws-gateway-1",
         "--debug",
         "--gateway-name=gateway-1",
         "--event-store=${EVENT_STORE}",
-        "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
         "--client-ack-topic=${TOPIC_CLIENT_ACK_MESSAGE}",
         "--new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--redis-endpoint=127.0.0.1:6379",
         "--kafka-client-id=gateway-1",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
@@ -29,19 +30,15 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Message Delivery MS",
-      "program": "${workspaceFolder}/services/message-delivery/message-delivery-ms.js",
+      "name": "Launch Message Delivery Worker",
+      "program": "${workspaceFolder}/services/message-delivery/message-delivery-worker.js",
       "args": [
         "--app-name=message-delivery",
         "--debug",
-        "--mongo-url=${MONGO_URL}",
         "--event-store=${EVENT_STORE}",
-        "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
-        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
-        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
         "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
-        "--client-ack-topic=${TOPIC_CLIENT_ACK_MESSAGE}",
-        "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
+        "--redis-endpoint=127.0.0.1:6379",
         "--kafka-client-id=message-delivery-1",
         "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY}",
         "--kafka-broker-list=${BROKER_LIST}",
@@ -50,8 +47,7 @@
         "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}",
         "--nats-server-list=${NATS_SERVER_LIST}",
         "--nats-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY}",
-        "--cache-type=redis",
-        "--redis-endpoint=127.0.0.1:6379"
+        "--channel-ms-endpoint=http://127.0.0.1:4002"
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
@@ -59,24 +55,63 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Message Router MS",
-      "program": "${workspaceFolder}/services/message-router-ms/message-router-ms.js",
+      "name": "Launch Message MS",
+      "program": "${workspaceFolder}/services/message-ms/message-ms.js",
       "args": [
-        "--app-name=message-router-1",
+        "--app-name=message-ms-1",
         "--debug",
-        "--event-store=${EVENT_STORE}",
-        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--port=4003",
+        "--gateway-name=message-ms-1",
+        "--mongo-url=mongodb://localhost:27017/chat",
         "--new-message-topic=${TOPIC_NEW_MESSAGE}",
-        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
-        "--group-message-topic=${TOPIC_NEW_GROUP_MS}",
+        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--event-store=${EVENT_STORE}",
+        "--kafka-client-id=message-ms-1",
         "--kafka-broker-list=${BROKER_LIST}",
-        "--kafka-client-id=message-router-1",
-        "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Storage Worker",
+      "program": "${workspaceFolder}/services/message-ms/message-storage-worker.js",
+      "args": [
+        "--app-name=message-storage-worker-1",
+        "--debug",
+        "--mongo-url=mongodb://localhost:27017/chat",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--client-ack-topic=${TOPIC_CLIENT_ACK_MESSAGE}",
+        "--event-store=${EVENT_STORE}",
+        "--kafka-client-id=message-delivery-1",
+        "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_STORAGE}",
+        "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
         "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}",
         "--nats-server-list=${NATS_SERVER_LIST}",
-        "--nats-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
+        "--nats-consumer-group=${CONSUMER_GROUP_MESSAGE_STORAGE}",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Channel MS",
+      "program": "${workspaceFolder}/services/channel-ms/channel-ms.js",
+      "args": [
+        "--app-name=channel-ms-1",
+        "--debug",
+        "--port=4002",
+        "--mongo-url=mongodb://localhost:27017/chat",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--event-store=${EVENT_STORE}",
+        "--kafka-client-id=group-1",
+        "--kafka-broker-list=${BROKER_LIST}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
@@ -100,48 +135,6 @@
         "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}",
         "--new-login-topic=${TOPIC_NEW_LOGIN}",
         "--nats-server-list=${NATS_SERVER_LIST}",
-      ],
-      "envFile": "${workspaceFolder}/.env",
-      "autoAttachChildProcesses": true
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch group MS",
-      "program": "${workspaceFolder}/services/group-ms/group-ms.js",
-      "args": [
-        "--app-name=group-ms-1",
-        "--debug",
-        "--port=4002",
-        "--mongo-url=mongodb://localhost:27017/chat",
-        "--event-store=${EVENT_STORE}",
-        "--kafka-client-id=group-1",
-        "--kafka-broker-list=${BROKER_LIST}",
-        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
-        "--nats-server-list=${NATS_SERVER_LIST}",
-      ],
-      "envFile": "${workspaceFolder}/.env",
-      "autoAttachChildProcesses": true
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch Group Message Router MS",
-      "program": "${workspaceFolder}/services/group-ms/group-message-router-ms.js",
-      "args": [
-        "--app-name=group-message-router-1",
-        "--debug",
-        "--event-store=${EVENT_STORE}",
-        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
-        "--new-group-message-topic=${TOPIC_NEW_GROUP_MS}",
-        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
-        "--kafka-broker-list=${BROKER_LIST}",
-        "--kafka-client-id=group-message-router-1",
-        "--kafka-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER}",
-        "--nats-server-list=${NATS_SERVER_LIST}",
-        "--nats-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER}",
-        "--mongo-url=${MONGO_URL}",
-        "--persistence-message-topic=${TOPIC_DB_MESSAGE}"
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
