--- a/deployment/config/nginx/nginx.dev.conf
+++ b/deployment/config/nginx/nginx.dev.conf
@@ -31,8 +31,12 @@ http {
     server 127.0.0.1:4001;
   }
 
-  upstream group_ms {
+  upstream channel_ms {
     server 127.0.0.1:4002;
+  }
+
+  upstream message_ms {
+    server 127.0.0.1:4003;
   }
 
   server {
@@ -51,11 +55,11 @@ http {
 
     rewrite /v1.0/(.*) /$1;
 
-    location /wss/ {
+    location ~* ^/wss {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite /wss/(.*) /$1 break;
+      rewrite ^(i|/)?/wss(/|$)(.*)$ /$4 break;
       proxy_pass http://connection_gateway;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -63,73 +67,86 @@ http {
       proxy_set_header Host $host;
     }
 
-    location /messages {
+    location ~* ^/messages {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      proxy_pass http://connection_gateway;
+      rewrite ^(i|/)?/messages(/|$)(.*)$ /$4 break;
+      proxy_pass http://message_ms;
     }
 
     location /login {
       proxy_pass http://profile_ms;
     }
 
-    location ~ /profile/(.*) {
+    location ~* ^/profile {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite /profile/(.*) /$1 break;
+      rewrite ^(i|/)?/profile(/|$)(.*)$ /$4 break;
       proxy_pass http://profile_ms;
     }
 
-    location ~ /contactbook/(.*) {
+    location ~* ^/contactbook {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite /v1.0/(.*) /$1 break;
       proxy_pass http://profile_ms;
     }
 
-    location ~ ^/file/(.*) {
+    location ~* ^/file {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
       
       add_header X-match-uri "/file";
       add_header X-uri $1;
-      rewrite ^/file/(.*) /$1 break;
+
+      rewrite ^(i|/)?/file(/|$)(.*)$ /$4 break;
       proxy_pass http://asset_ms;
     }
 
-    location ~ ^/group/(.*) {
+    location ~* ^/group {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
       add_header X-match-uri "/group";
       add_header X-uri $1;
 
-      rewrite ^/group/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      rewrite ^(i|/)?/group(/|$)(.*)$ /$4 break;
+      proxy_pass http://channel_ms;
     }
 
-    location ~ /assets/(.*) {
+    location ~* ^/channels {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      add_header X-match-uri "/channels";
+      add_header X-uri $1;
+
+      rewrite ^(i|/)?/channels(/|$)(.*)$ /$4 break;
+      proxy_pass http://channel_ms;
+    }
+
+    location ~* ^/assets {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
       
       add_header X-match-uri "/assets";
       add_header X-uri $1;
-      rewrite /assets/(.*) /$1 break;
+
+      rewrite ^(i|/)?/assets(/|$)(.*)$ /$4 break;
       proxy_pass http://asset_ms;
     }
 
-    location ~ /groups/(.*) {
+    location ~* ^/groups {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      add_header X-match-uri "/group";
+      add_header X-match-uri "/groups";
       add_header X-uri $1;
 
-      rewrite /groups/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      rewrite ^(i|/)?/groups(/|$)(.*)$ /$4 break;
+      proxy_pass http://channel_ms;
     }
 
     location / {
