--- a/deployment/config/nginx/nginx.docker.conf
+++ b/deployment/config/nginx/nginx.docker.conf
@@ -52,8 +52,12 @@ http {
     server file:4001;
   }
   
-  upstream group_ms {
+  upstream channel_ms {
     server group:4002;
+  }
+
+  upstream message_ms {
+    server message:4003;
   }
 
   server {
@@ -88,10 +92,12 @@ http {
       proxy_set_header Host $host;
     }
 
-    location /messages {
+    location ~ /messages/(.*) {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
-      proxy_pass http://connection_gateway;
+
+      rewrite ^/messages/(.*) /$1 break;
+      proxy_pass http://message_ms;
     }
 
     location /login {
@@ -132,8 +138,20 @@ http {
       add_header X-uri $1;
 
       rewrite ^/group/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      proxy_pass http://channel_ms;
     }
+
+    location ~ ^/channels/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      add_header X-match-uri "/channels";
+      add_header X-uri $1;
+
+      rewrite ^/channel/(.*) /$1 break;
+      proxy_pass http://channel_ms;
+    }
+
 
     location ~ /assets/(.*) {
       auth_request /auth;
@@ -153,7 +171,7 @@ http {
       add_header X-uri $1;
 
       rewrite /groups/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      proxy_pass http://channel_ms;
     }
 
     error_page 404 /404.html;
