--- a/deployment/config/nginx/nginx.dev.conf
+++ b/deployment/config/nginx/nginx.dev.conf
@@ -27,7 +27,7 @@ http {
     server 127.0.0.1:4000;
   }
 
-  upstream asset_ms {
+  upstream media_ms {
     server 127.0.0.1:4001;
   }
 
@@ -94,28 +94,6 @@ http {
       proxy_pass http://profile_ms;
     }
 
-    location ~* ^/file {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-      
-      add_header X-match-uri "/file";
-      add_header X-uri $1;
-
-      rewrite ^(i|/)?/file(/|$)(.*)$ /$4 break;
-      proxy_pass http://asset_ms;
-    }
-
-    location ~* ^/group {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      add_header X-match-uri "/group";
-      add_header X-uri $1;
-
-      rewrite ^(i|/)?/group(/|$)(.*)$ /$4 break;
-      proxy_pass http://channel_ms;
-    }
-
     location ~* ^/channels {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
@@ -127,26 +105,15 @@ http {
       proxy_pass http://channel_ms;
     }
 
-    location ~* ^/assets {
+    location ~* ^/media {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
       
-      add_header X-match-uri "/assets";
+      add_header X-match-uri "/media";
       add_header X-uri $1;
 
-      rewrite ^(i|/)?/assets(/|$)(.*)$ /$4 break;
-      proxy_pass http://asset_ms;
-    }
-
-    location ~* ^/groups {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      add_header X-match-uri "/groups";
-      add_header X-uri $1;
-
-      rewrite ^(i|/)?/groups(/|$)(.*)$ /$4 break;
-      proxy_pass http://channel_ms;
+      rewrite ^(i|/)?/media(/|$)(.*)$ /$4 break;
+      proxy_pass http://media_ms;
     }
 
     location / {
