--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ ports:
     onOpen: open-browser
 
 tasks:
-  - init: yarn install
+  - init: npm install
   - name: Kafka
     init: chmod +x deployment/scripts/*.bash && ./deployment/scripts/setup.bash
     command: >
