--- a/deployment/config/nginx/nginx.docker.conf
+++ b/deployment/config/nginx/nginx.docker.conf
@@ -48,7 +48,7 @@ http {
     server profile:4000;
   }
   
-  upstream asset_ms {
+  upstream media_ms {
     server file:4001;
   }
   
@@ -80,11 +80,12 @@ http {
 
     rewrite /v1.0/(.*) /$1;
 
-    location /wss/ {
+
+    location ~* ^/wss {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite /wss/(.*) /$1 break;
+      rewrite ^(i|/)?/wss(/|$)(.*)$ /$4 break;
       proxy_pass http://connection_gateway;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -92,11 +93,11 @@ http {
       proxy_set_header Host $host;
     }
 
-    location ~ /messages/(.*) {
+    location ~* ^/messages {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite ^/messages/(.*) /$1 break;
+      rewrite ^(i|/)?/messages(/|$)(.*)$ /$4 break;
       proxy_pass http://message_ms;
     }
 
@@ -104,74 +105,41 @@ http {
       proxy_pass http://profile_ms;
     }
 
-    location ~ /profile/(.*) {
+    location ~* ^/profile {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite /profile/(.*) /$1 break;
+      rewrite ^(i|/)?/profile(/|$)(.*)$ /$4 break;
       proxy_pass http://profile_ms;
     }
 
-    location ~ /contactbook/(.*) {
+    location ~* ^/contactbook {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite /v1.0/(.*) /$1 break;
       proxy_pass http://profile_ms;
     }
 
-    location ~ ^/file/(.*) {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-      
-      add_header X-match-uri "/file";
-      add_header X-uri $1;
-      rewrite ^/file/(.*) /$1 break;
-      proxy_pass http://asset_ms;
-    }
-
-    location ~ ^/group/(.*) {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      add_header X-match-uri "/group";
-      add_header X-uri $1;
-
-      rewrite ^/group/(.*) /$1 break;
-      proxy_pass http://channel_ms;
-    }
-
-    location ~ ^/channels/(.*) {
+    location ~* ^/channels {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
       add_header X-match-uri "/channels";
       add_header X-uri $1;
 
-      rewrite ^/channel/(.*) /$1 break;
+      rewrite ^(i|/)?/channels(/|$)(.*)$ /$4 break;
       proxy_pass http://channel_ms;
     }
 
-
-    location ~ /assets/(.*) {
+    location ~* ^/media {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
       
-      add_header X-match-uri "/assets";
-      add_header X-uri $1;
-      rewrite /assets/(.*) /$1 break;
-      proxy_pass http://asset_ms;
-    }
-
-    location ~ /groups/(.*) {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      add_header X-match-uri "/group";
+      add_header X-match-uri "/media";
       add_header X-uri $1;
 
-      rewrite /groups/(.*) /$1 break;
-      proxy_pass http://channel_ms;
+      rewrite ^(i|/)?/media(/|$)(.*)$ /$4 break;
+      proxy_pass http://media_ms;
     }
 
     error_page 404 /404.html;
